# eueno-proof-of-replication

./: .gitignore  Cargo.toml  README.md
bellperson/src/groth16/: mod.rs  single_verifier.rs  verifying_key.rs
cli/: .env.sample  README.md  config.json  package-lock.json  package.json  tsconfig.json
cli/src/: chain.ts  cosm-lib.ts  deploy.js  index.js  migrate.js  unpause_custom.js
cli/src/msg/instantiation/: stackeddrg.js
cli/src/msg/migrate/: migrateContract.js
cli/src/msg/query/: get_state.js
contract/: Cargo.toml
contract-auxiliaries/: Cargo.toml
contract-auxiliaries/src/: deserializer.rs  utils.rs
contract-auxiliaries/src/crypto/: feistel.rs  mod.rs
contract-auxiliaries/src/domain/: mod.rs  poseidon.rs  sha256.rs
contract-auxiliaries/src/drg/: drgraph.rs
contract-auxiliaries/src/drg/stacked/: challenges.rs  verifier.rs  verifier_graph.rs  verifier_params.rs
contract/examples/: schema.rs
contract/src/: contract.rs  msg.rs  state.rs
contracts/: Cargo.toml
contracts/bellperson/src/groth16/: multiscalar.rs  single_verifier.rs
contracts/bellperson/src/groth16/tests/: mod.rs
contracts/bellperson/tests/: mimc.rs
contracts/examples/: schema.rs
contracts/src/: contract.rs  msg.rs  state.rs
converter/: Cargo.toml
converter/src/: blstrs_to_paired.rs  groth16.rs  lib.rs  serializer.rs
exps/: Cargo.toml
exps/src/: main.rs
fr32/: Cargo.toml
hashers/: Cargo.toml
hashers/src/: types.rs
porep/: Cargo.toml
porep/contracts/stacked-drg/: Cargo.toml
porep/contracts/stacked-drg/artifacts/: stacked-drg.wasm
porep/contracts/stacked-drg/src/: contract.rs  state.rs
proofs-core/: Cargo.toml
proofs-core/benches/: drgraph.rs  merkle.rs  xor.rs
proofs-core/src/: compound_proof.rs  drgraph.rs  lib.rs  pieces.rs  por.rs  util.rs  verifier_drgraph.rs
proofs-core/src/crypto/: mod.rs
proofs-core/src/gadgets/: por.rs
proofs-core/src/merkle/: builders.rs  mod.rs  proof.rs  tree.rs
proofs-core/tests/: por_circuit.rs  por_compound.rs  por_vanilla.rs
proofs-porep/: Cargo.toml  parent_cache.json
proofs-porep/benches/: encode.rs  parents.rs
proofs-porep/src/: encode.rs  lib.rs
proofs-porep/src/drg/: circuit.rs  compound.rs  vanilla.rs
proofs-porep/src/stacked/circuit/: column.rs  column_proof.rs  create_label.rs  hash.rs  params.rs  proof.rs
proofs-porep/src/stacked/vanilla/: cache.rs  challenges.rs  column.rs  column_proof.rs  encoding_proof.rs  graph.rs  hash.rs  labeling_proof.rs  mod.rs  params.rs  porep.rs  proof.rs  proof_scheme.rs  verifier.rs  verifier_graph.rs  verifier_params.rs
proofs-porep/src/stacked/vanilla/create_label/: mod.rs  single.rs
proofs-porep/tests/: drg_circuit.rs  drg_compound.rs  drg_vanilla.rs  stacked_circuit.rs  stacked_compound.rs  stacked_vanilla.rs
sha2raw/: Cargo.toml
