[package]
name = "contract-auxiliaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
anyhow = "1.0.34"
sha2 = "0.10.2"
generic-array = "0.14.4"
blake2b_simd = "1.0.0"
num-bigint = "0.4.3"
num-traits = "0.2"
rand_chacha = "0.3"
schemars = "0.8.1"
