[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.1.0", default-features = false, features = ["abort"]}
cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
json = "0.12.4"
thiserror = { version = "1.0.23" }
serde_json = "1.0.59"
contract-auxiliaries = {path = "../contract-auxiliaries"}

[dev-dependencies]
cw-multi-test = "0.16.0"
cosmwasm-schema = "1.1.0"

[features]
default = ["groth16"]
groth16 = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

