[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ark-groth16 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
bellperson = "0.24.0"
blstrs = "0.6.0"
anyhow = "1.0.34"
proofs-porep = { path = "../proofs-porep" }