[package]
name = "fr32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.23"
byte-slice-cast = "1.0.0"
byteorder = "1"
ff = "0.12.0"
thiserror = "1.0.6"
blstrs = "0.6.0"

[dev-dependencies]
bitvec = "0.17"
criterion = "0.3"
itertools = "0.10.3"
pretty_assertions = "1.2.0"
rand = "0.8"
rand_xorshift = "0.3"

[[bench]]
name = "fr"
harness = false