[package]
name = "hashers"
version = "0.1.0"
edition = "2021"

[dependencies]
bellperson = "0.24.0"
blstrs = "0.6.0"
generic-array = "0.14.4"
merkletree = "0.22.0"
ff = "0.12.0"
anyhow = "1.0.34"
serde = "1.0.117"
rand = "0.8.0"

neptune = { version = "~8.0.0", optional = true, features = ["bls", "arity2", "arity4", "arity8", "arity11", "arity16", "arity24", "arity36"] }
lazy_static = { version = "1.4.0", optional = true }
blake2s_simd = { version = "1.0.0", optional = true }
sha2 = { version = "0.10.2", optional = true }
hex = "0.4.2"

[features]
default = ["opencl", "blake2s", "poseidon", "sha256"]

cuda = ["bellperson/cuda", "neptune/cuda"]
opencl = ["bellperson/opencl", "neptune/opencl"]

# available hashers
blake2s = ["blake2s_simd"]
poseidon = ["neptune", "lazy_static"]
sha256 = ["sha2"]

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.59"