[package]
name = "sha2raw"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.10.3"
fake-simd = "0.1"
opaque-debug = "0.3"
sha2-asm = { version = "0.6", optional = true }
byteorder = "1.3.4"

[dependencies.lazy_static]
version = "1.4.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.2"

[dev-dependencies]
sha2 = "0.10.2"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[features]
default = ["asm"]
asm = ["sha2-asm"]